<resources>
    <string name="app_name">NatureAll</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">WhereTheWildThingsAre</string>
    <string name="start_question">What would you like to fucking do?</string>
    <string name="search_animal_btn">Look for a fucking animal</string>
    <string name="search_plant_btn">Look for a fucking plant</string>
    <string name="upload_picture_btn">Upload a fucking picture</string>
    <string name="return_btn">Return to Main Screen</string>
    <string name="closeimageview">closeImageView</string>
    <string name="callin_activity_message">The calling activity was</string>
    <string name="galleryimageview">galleryImageView</string>
    <string name="cameraimageview">cameraImageView</string>
    <string name="upload_picture_image_view">upload_picture_image_view</string>


</resources>