<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <ImageView
        android:contentDescription="@string/galleryimageview"
        android:layout_width="83dp"
        android:layout_height="match_parent"
        android:id="@+id/imageView2"
        android:background="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:contentDescription="@string/closeimageview"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:id="@+id/imageView3"
        android:background="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageView
        android:contentDescription="@string/cameraimageview"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:background="@android:drawable/ic_menu_camera" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_btn"
            android:text="@string/return_btn"
            android:onClick="onReturnBtnClick">

        </Button>
        <TextView
            android:id="@+id/calling_activity_info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callin_activity_message"/>
        </LinearLayout>

</LinearLayout>