<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gary.natureall.MainActivity"
    android:background="@mipmap/deercross">

    <TextView
        android:text="@string/start_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_animal_btn"
        android:id="@+id/search_animal_btn"
        android:textColor="#ffffff"
        android:background="@mipmap/dpm"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/search_plant_btn"
        android:layout_alignStart="@+id/search_plant_btn"
        android:layout_marginTop="99dp"
        android:onClick="onSearchAnimalClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_plant_btn"
        android:id="@+id/search_plant_btn"
        android:textColor="#ffffff"
        android:background="@mipmap/dpm"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onSearchPlantClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_picture_btn"
        android:id="@+id/upload_picture_btn"
        android:textColor="#ffffff"
        android:background="@mipmap/dpm"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/search_plant_btn"
        android:layout_alignLeft="@+id/search_plant_btn"
        android:layout_alignStart="@+id/search_plant_btn"
        android:onClick="onUploadPictureClick"/>

</RelativeLayout>
